--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
                                 <div class="mb-8 vx-col sm:block md:block  mx-auto self-center">
-                                    <img src="/Content/images/logoref.jpg" alt="Referencia" style="width:185px;" class="m-auto">
+                                    <img src="logoref.jpg" alt="Referencia" style="width:185px;" class="m-auto">
                                 </div>
                                 <div>
                                     
