--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <br>
 
             <div style="max-width:500px; margin:auto">
-                <img src="/Content/autenticar/img/topimg.jpg" alt="" style="width:100%;" />
+                <img src="topimg.jpg" alt="" style="width:100%;" />
                
                 <div class="md:p-8 py-5 px-5 w-full self-center d-theme-dark-bg" style="border:solid  10px darkgreen; width:100%; padding:10px">
 
@@ -122,7 +122,7 @@
                             <td>
                                 Identifica el <span style="color:darkgreen;font-weight:bold">C&oacute;digo QR</span> ubicado en la esquina derecha superior de los resultados.<br><br>
                                 <div class="vx-row" style="margin:auto">
-                                    <img src="/Content/autenticar/img/res.png" style="width:80%" />
+                                    <img src="res.png" style="width:80%" />
                                 </div>
                                 <br><br>
                             </td>
